--- a/_sass/utilities/_vars.scss
+++ b/_sass/utilities/_vars.scss
@@ -26,7 +26,7 @@
   --fs-italic: italic;
 
   // FONT SIZES
-  --fs-base: 18px; // Base font size for the document
+  --fs-base: 112.5%; // Base font size for the document; 100% == 16px, 112.5% == 18px
 
   --fs-900: 3.052rem; // 54.936px
   --fs-800: 2.441rem; // 43.938px
