--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer pb--200">
+<footer class="pb--200">
   <hr class="footer__divider mb--100" />
   <p class="fs-italic mb--100">
     "The proper function of man is to live, not to exist. I shall not waste my
