--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,17 @@
     {% include header.html %}
     <main>{{ content }}</main>
     {% include footer.html %}
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
