--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,10 +41,10 @@
   <link
     rel="mask-icon"
     href="/assets/img/favicons/safari-pinned-tab.svg?v=2"
-    color="#5bbad5"
+    color="#0353a4"
   />
   <link rel="shortcut icon" href="/favicon.ico?v=2" />
-  <meta name="msapplication-TileColor" content="#2b5797" />
+  <meta name="msapplication-TileColor" content="#fcfffc" />
   <meta
     name="msapplication-config"
     content="/assets/img/favicons/browserconfig.xml?v=2"
