Added Splitbee link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,6 +50,7 @@
     content="/assets/img/favicons/browserconfig.xml?v=2"
   />
   <meta name="theme-color" content="#fcfffc" />
+  <script async src="https://cdn.splitbee.io/sb.js"></script>
   <title>
     {% if page.title %}{{ page.title | strip_html }} ~ {% endif %}{{ site.title
     }}
