--- a/_sass/utilities/_utility-classes.scss
+++ b/_sass/utilities/_utility-classes.scss
@@ -1,19 +1,19 @@
-.dark-mode {
-  // COLORS
-  --clr-primary: #1b1b1e;
-  --clr-secondary: #fcfffc;
+// .dark-mode {
+//   // COLORS
+//   --clr-primary: #1b1b1e;
+//   --clr-secondary: #fcfffc;
 
-  --clr-accent: #ffa62b;
+//   --clr-accent: #ffa62b;
 
-  --clr-tbl-accent: #3a3a3a;
+//   --clr-tbl-accent: #3a3a3a;
 
-  --bg-gradient: linear-gradient(
-    0deg,
-    rgba(252, 255, 252, 0) 0%,
-    rgba(27, 27, 30, 1) 50%,
-    rgba(27, 27, 30, 1) 100%
-  );
-}
+//   --bg-gradient: linear-gradient(
+//     0deg,
+//     rgba(252, 255, 252, 0) 0%,
+//     rgba(27, 27, 30, 1) 50%,
+//     rgba(27, 27, 30, 1) 100%
+//   );
+// }
 
 // LAYOUT
 .flex {
