Modified redirect after CTA submit

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,7 +1,7 @@
 <form
   action="https://buttondown.email/api/emails/embed-subscribe/vbilgin"
   method="post"
-  onsubmit="window.open('https://buttondown.email/vbilgin', 'popupwindow')"
+  onsubmit="window.open('https://victorbilgin.com/thank-you', 'popupwindow')"
   class="embeddable-buttondown-form cta"
 >
   <h2>Subscribe for updates</h2>
